...
import com.example.tuprofe.ui.utils.Resena
import com.example.tuprofe.ui.utils.ReviewListSkeleton
import com.example.tuprofe.ui.utils.pressScaleEffect

@Composable
fun MainScreen(
    modifier: Modifier = Modifier.testTag("mainScreen"),
    onResenaClick: (String) -> Unit,
    onProfileClick: (Profesor) -> Unit,
    onUserClick: (String) -> Unit,
    mainViewModel: MainViewModel
) {
    val uiState by mainViewModel.uiState.collectAsState()
...
) {
    Card(
        modifier = modifier
            .fillMaxWidth()
            .padding(vertical = 5.dp, horizontal = 18.dp)
            .pressScaleEffect()
            .testTag("review_card"),
        shape = RoundedCornerShape(30.dp),
        border = BorderStroke(
            width = 2.5.dp,
            color = colorResource(R.color.BordeTuProfe)
        ),
        colors = CardDefaults.cardColors(MaterialTheme.colorScheme.surface),
...
